--- a/app/src/main/res/layout/fragment_bank_g_s_t.xml
+++ b/app/src/main/res/layout/fragment_bank_g_s_t.xml
@@ -58,7 +58,7 @@
             android:layout_marginStart="@dimen/marign20dp"
             android:layout_marginTop="@dimen/marign20dp"
             android:fontFamily="@font/lato_bold"
-            android:text="@{bankinfo.accountNo}"
+            android:text="@{String.valueOf(bankinfo.accountNo)}"
             android:textColor="@color/black"
             app:layout_constraintLeft_toRightOf="@+id/tv_user_acc_number"
             app:layout_constraintTop_toBottomOf="@+id/tv_bank_Deatil" />
@@ -136,6 +136,16 @@
             android:textColor="@color/black"
             app:layout_constraintLeft_toRightOf="@+id/tv_user_bank_ifsccode"
             app:layout_constraintTop_toBottomOf="@+id/tv_user_bank_name" />
+
+        <ProgressBar
+            android:visibility="gone"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/pb_bankinfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
