commit 20-06-2021 for spidpay

--- a/app/src/main/res/drawable/logincountrycode_bg.xml
+++ b/app/src/main/res/drawable/logincountrycode_bg.xml
@@ -56,8 +56,8 @@
                 android:topLeftRadius="@dimen/marign10dp"
                 />
             <stroke
-                android:width="2dp"
-                android:color="@color/white" />
+                android:width="1dp"
+                android:color="@color/border_color" />
         </shape>
     </item>
 
