--- a/app/src/main/res/drawable/edittext_shadow.xml
+++ b/app/src/main/res/drawable/edittext_shadow.xml
@@ -82,7 +82,9 @@
     <item>
         <shape>
             <solid android:color="@android:color/white" />
-
+            <stroke
+                android:width="1dp"
+                android:color="@color/border_color"/>
             <corners android:radius="10dp" />
         </shape>
     </item>
