--- a/app/src/main/res/drawable/login_mobilenumber_bg.xml
+++ b/app/src/main/res/drawable/login_mobilenumber_bg.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
             <padding
@@ -9,8 +9,7 @@
                 android:top="1dp" />
             <corners
                 android:bottomRightRadius="@dimen/marign10dp"
-                android:topRightRadius="@dimen/marign10dp"
-                />
+                android:topRightRadius="@dimen/marign10dp" />
 
             <solid android:color="#05DCDCDC" />
 
@@ -26,8 +25,7 @@
 
             <corners
                 android:bottomRightRadius="@dimen/marign10dp"
-                android:topRightRadius="@dimen/marign10dp"
-                />
+                android:topRightRadius="@dimen/marign10dp" />
             <solid android:color="#05DCDCDC" />
 
 
@@ -42,8 +40,7 @@
 
             <corners
                 android:bottomRightRadius="@dimen/marign10dp"
-                android:topRightRadius="@dimen/marign10dp"
-                />
+                android:topRightRadius="@dimen/marign10dp" />
 
             <solid android:color="#05DCDCDC" />
 
@@ -53,15 +50,13 @@
 
     <item>
         <shape>
-            <solid
-                android:color="@color/white"/>
+            <solid android:color="@color/white" />
             <corners
                 android:bottomRightRadius="@dimen/marign10dp"
-                android:topRightRadius="@dimen/marign10dp"
-                />
+                android:topRightRadius="@dimen/marign10dp" />
             <stroke
-                android:width="2dp"
-                android:color="@color/white"></stroke>
+                android:width="1dp"
+                android:color="@color/border_color"/>
 
         </shape>
     </item>
