--- a/app/src/main/res/layout/fragment_bank_g_s_t.xml
+++ b/app/src/main/res/layout/fragment_bank_g_s_t.xml
@@ -20,7 +20,7 @@
             android:id="@+id/tv_bank_Deatil"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/marign20dp"
             android:layout_marginTop="@dimen/marign20dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/bankdetail"
@@ -43,7 +43,7 @@
             android:id="@+id/tv_user_acc_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/marign20dp"
             android:layout_marginTop="@dimen/marign20dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/accnumber"
