--- a/app/src/main/res/layout/update_kyc_layout.xml
+++ b/app/src/main/res/layout/update_kyc_layout.xml
@@ -58,7 +58,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_update_address" />
 
         <EditText
-
+            android:maxLength="12"
             android:id="@+id/edt_edit_addharnumer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
