commit 27-06-2021  for spidpay

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -169,6 +169,7 @@
                 android:background="@drawable/edittext_shadow"
                 android:gravity="center_vertical"
                 android:hint="@string/password"
+                android:maxLength="20"
                 android:inputType="text"
                 android:paddingStart="@dimen/marign15dp"
                 android:paddingEnd="@dimen/marign10dp"
