--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+            <variable
+                name="changepasswordviewmodel"
+                type="com.example.spidpay.ui.changepassword.ChangePasswordViewModel" />
     </data>
 
     <RelativeLayout
@@ -61,8 +63,8 @@
                     android:background="@drawable/edittext_shadow"
                     android:hint="@string/oldpassword"
                     android:inputType="text"
+                    android:text="@={changepasswordviewmodel.string_old_password}"
                     android:paddingStart="@dimen/marign15dp"
-                    android:paddingTop="@dimen/marign10dp"
                     android:paddingEnd="@dimen/marign10dp"
                     app:hintEnabled="false" />
 
@@ -88,9 +90,10 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/edittext_shadow"
                     android:hint="@string/newpassword"
+                    android:text="@={changepasswordviewmodel.string_new_password}"
                     android:inputType="text"
                     android:paddingStart="@dimen/marign15dp"
-                    android:paddingTop="@dimen/marign10dp"
+
                     android:paddingEnd="@dimen/marign10dp"
                     app:hintEnabled="false" />
 
@@ -117,8 +120,9 @@
                     android:background="@drawable/edittext_shadow"
                     android:hint="@string/confirmpassword"
                     android:inputType="text"
+                    android:text="@={changepasswordviewmodel.string_confirm_password}"
                     android:paddingStart="@dimen/marign15dp"
-                    android:paddingTop="@dimen/marign10dp"
+
                     android:paddingEnd="@dimen/marign10dp"
                     app:hintEnabled="false" />
 
@@ -131,6 +135,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/marign15dp"
                 android:layout_marginTop="@dimen/marign20dp"
+                android:onClick="@{(v)->changepasswordviewmodel.validateChangePassField(v)}"
                 android:layout_marginEnd="@dimen/marign15dp"
                 android:background="@drawable/button_bg_green"
                 android:fontFamily="@font/lato"
@@ -141,6 +146,12 @@
 
         </LinearLayout>
 
+        <ProgressBar
+            android:layout_centerInParent="true"
+            android:visibility="gone"
+            android:id="@+id/pb_change_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
     </RelativeLayout>
 </layout>
