--- a/app/src/main/res/drawable/dialogwith_blackborder.xml
+++ b/app/src/main/res/drawable/dialogwith_blackborder.xml
@@ -8,6 +8,6 @@
          />
     <stroke
         android:width="2dp"
-        android:color="@color/white"></stroke>
+        android:color="@color/white"/>
 
 </shape>
