--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,7 +15,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/img_welcomebase"
@@ -98,7 +98,7 @@
                     android:background="@android:color/transparent"
                     android:hint="@string/firstname"
                     android:inputType="text"
-                    android:maxLength="10"
+                    android:maxLength="50"
                     android:paddingLeft="@dimen/marign10dp"
                     android:paddingTop="@dimen/marign10dp"
                     android:paddingRight="@dimen/marign10dp"
@@ -143,7 +143,7 @@
                     android:background="@android:color/transparent"
                     android:hint="@string/lastname"
                     android:inputType="text"
-                    android:maxLength="10"
+                    android:maxLength="50"
                     android:paddingLeft="@dimen/marign10dp"
                     android:paddingTop="@dimen/marign10dp"
                     android:paddingRight="@dimen/marign10dp"
