--- a/app/src/main/res/layout/forgotpasswordlayout.xml
+++ b/app/src/main/res/layout/forgotpasswordlayout.xml
@@ -1,108 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/dialogwith_whiteborder"
-    android:paddingTop="@dimen/marign20dp"
-    android:paddingBottom="@dimen/marign20dp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+
+        <variable
+            name="loginviewmodel"
+            type="com.example.spidpay.ui.login.LoginViewModel" />
+
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraint_forgot_mobile_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/marign20dp"
-        android:layout_marginTop="@dimen/marign20dp"
-        android:layout_marginEnd="@dimen/marign20dp"
-        android:background="@drawable/edittext_shadow"
-        android:orientation="horizontal"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:background="@drawable/dialogwith_whiteborder"
+        android:paddingTop="@dimen/marign20dp"
+        android:paddingBottom="@dimen/marign20dp">
 
-        <EditText
-            android:id="@+id/edt_login_mobile_number"
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/txtinput_forgot_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:hint="@string/mobileno"
-            android:inputType="number"
-            android:maxLength="10"
-            android:paddingStart="@dimen/marign5dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingEnd="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
-            android:singleLine="true"
-            android:textColorHint="@color/lightgrey"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginStart="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign15dp"
+            android:layout_marginEnd="@dimen/marign20dp"
+            app:hintEnabled="false"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
+            app:passwordToggleEnabled="true">
 
-        <ImageView
-            android:id="@+id/img_cleare_forgot_mobilenumber"
-            android:layout_width="@dimen/marign20dp"
-            android:layout_height="@dimen/marign20dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_gravity="center"
-            android:layout_marginEnd="@dimen/marign10dp"
-            android:focusable="false"
-            android:src="@drawable/clear_field"
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/edt_forgot_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edittext_shadow"
+                android:hint="@string/password"
+                android:inputType="text"
+                android:paddingStart="@dimen/marign15dp"
+                android:paddingEnd="@dimen/marign10dp"
+                android:text="@={loginviewmodel.forgot_password}"
+                app:hintEnabled="false" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/txtinput_forgot_confirm_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign15dp"
+            android:layout_marginEnd="@dimen/marign20dp"
+            app:hintEnabled="false"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtinput_forgot_password"
+            app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
+            app:passwordToggleEnabled="true">
+
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/edt_loginpassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edittext_shadow"
+                android:hint="@string/confirmpassword"
+                android:inputType="text"
+                android:paddingStart="@dimen/marign15dp"
+                android:paddingEnd="@dimen/marign10dp"
+                android:text="@={loginviewmodel.forgot_confirm_passwprd}"
+                app:hintEnabled="false" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <Button
+            android:id="@+id/btn_continue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginEnd="@dimen/marign20dp"
+            android:layout_marginBottom="@dimen/marign20dp"
+            android:background="@drawable/button_bg_green"
+            android:fontFamily="@font/lato"
+            android:onClick="@{(v)->loginviewmodel.validate_Forgot_Password_Field(v)}"
+            android:text="@string/txtcontinue"
+            android:textColor="@color/white"
+            android:textSize="@dimen/marign18sp"
+            app:layout_constraintTop_toBottomOf="@+id/txtinput_forgot_confirm_password" />
+
+
+        <ProgressBar
+            android:id="@+id/pb_forgot"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txtinput_login_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/marign20dp"
-        android:layout_marginTop="@dimen/marign15dp"
-        android:layout_marginEnd="@dimen/marign20dp"
-        app:hintEnabled="false"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraint_forgot_mobile_number"
-        app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
-        app:passwordToggleEnabled="true">
-
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/edt_loginpassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/edittext_shadow"
-            android:hint="@string/password"
-            android:inputType="text"
-            android:paddingStart="@dimen/marign15dp"
-            android:paddingEnd="@dimen/marign10dp"
-            app:hintEnabled="false" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-
-    <Button
-        android:id="@+id/btn_continue"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/marign20dp"
-        android:layout_marginTop="@dimen/marign20dp"
-        android:layout_marginEnd="@dimen/marign20dp"
-        android:layout_marginBottom="@dimen/marign20dp"
-        android:background="@drawable/button_bg_green"
-        android:fontFamily="@font/lato"
-        android:text="@string/txtcontinue"
-        android:textColor="@color/white"
-        android:textSize="@dimen/marign18sp"
-        app:layout_constraintTop_toBottomOf="@+id/txtinput_login_password" />
-
-
-    <ProgressBar
-        android:visibility="gone"
-        android:id="@+id/pb_login"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
