--- a/app/src/main/res/layout/fragment_add_money.xml
+++ b/app/src/main/res/layout/fragment_add_money.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <variable
+            name="addmoneyviewmodel"
+            type="com.example.spidpay.ui.addmoney.AddMoneyViewModel" />
 
     </data>
 
@@ -14,71 +18,98 @@
 
         <TextView
             android:id="@+id/tv_addmoney_preferedoption"
-            android:textSize="@dimen/marign20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/marign20dp"
             android:layout_marginTop="@dimen/marign40dp"
             android:fontFamily="@font/lato_bold"
-            android:textColor="@color/black"
             android:text="@string/prefoption"
+            android:textColor="@color/black"
+            android:textSize="@dimen/marign20sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <RadioButton
             android:id="@+id/rb_online"
-            android:textSize="@dimen/marign20sp"
-            android:textColor="@color/black"
-            android:text="@string/online"
-            android:layout_marginTop="@dimen/marign20dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="@dimen/marign20dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_addmoney_preferedoption"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign20dp"
+            android:checked="@{addmoneyviewmodel.online}"
+            android:onClick="@{()->addmoneyviewmodel.onOnlineClick()}"
+            android:text="@string/online"
+            android:textColor="@color/black"
+            android:textSize="@dimen/marign20sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_addmoney_preferedoption" />
 
         <TextView
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rb_online"
             android:id="@+id/tv_addmoney_usingpaymentgetway"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/marign40dp"
             android:fontFamily="@font/lato_bold"
-            android:textColor="@color/add_money_hint_color"
             android:text="@string/usingpaymentgetway"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:textColor="@color/add_money_hint_color"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rb_online" />
 
 
         <RadioButton
             android:id="@+id/rb_cashdesposit"
-            android:textSize="@dimen/marign20sp"
-            android:textColor="@color/black"
-            android:text="@string/cashdeposit"
-            android:layout_marginTop="@dimen/marign20dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="@dimen/marign20dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_addmoney_usingpaymentgetway"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign20dp"
+            android:checked="@{addmoneyviewmodel.cashdeposite}"
+            android:onClick="@{()->addmoneyviewmodel.onDepositeCashClick()}"
+            android:text="@string/cashdeposit"
+            android:textColor="@color/black"
+            android:textSize="@dimen/marign20sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_addmoney_usingpaymentgetway" />
 
         <TextView
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rb_cashdesposit"
             android:id="@+id/tv_addmoney_requiredvalidation"
-            android:layout_marginLeft="@dimen/marign40dp"
-            android:fontFamily="@font/lato_bold"
-            android:textColor="@color/add_money_hint_color"
-            android:text="@string/requiredvalidation"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marign40dp"
+            android:fontFamily="@font/lato_bold"
+            android:text="@string/requiredvalidation"
+            android:textColor="@color/add_money_hint_color"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rb_cashdesposit" />
+
+        <RadioButton
+            android:id="@+id/rb_requestparent"
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign20dp"
+            android:checked="@{addmoneyviewmodel.requestparent}"
+            android:onClick="@{()->addmoneyviewmodel.onRequestParentClick()}"
+            android:text="@string/requestparent"
+            android:textColor="@color/black"
+            android:textSize="@dimen/marign20sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_addmoney_requiredvalidation" />
+
+        <TextView
+            android:id="@+id/tv_addmoney_requestparent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marign40dp"
+            android:fontFamily="@font/lato_bold"
+            android:text="@string/immediateparent"
+            android:textColor="@color/add_money_hint_color"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rb_requestparent" />
 
 
         <Button
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/btn_chooseoptionformoney"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -88,8 +119,13 @@
             android:background="@drawable/button_bg_green"
             android:fontFamily="@font/lato"
             android:text="@string/txtcontinue"
+            android:onClick="@{(v)->addmoneyviewmodel.onButtonContinueClick(v)}"
             android:textColor="@color/white"
-            android:textSize="@dimen/marign18sp" />
+            android:textSize="@dimen/marign18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
