--- a/app/src/main/res/layout/update_company_detail.xml
+++ b/app/src/main/res/layout/update_company_detail.xml
@@ -176,6 +176,7 @@
             app:layout_constraintTop_toBottomOf="@+id/edt_edit_coi" />
 
         <EditText
+            android:maxLength="15"
             android:id="@+id/edt_edit_gstno"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
