commit 30-06-2021  3 time  for spidpay

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -39,7 +39,7 @@
         tools:layout="@layout/fragment_available_online_balance" />
     <fragment
         android:id="@+id/cash_Desposit_Fragment"
-        android:name="com.example.spidpay.ui.addmoney.CashDesposit_Activity"
+        android:name="com.example.spidpay.ui.addmoney.cashdeposite.CashDesposit_Activity"
         android:label="fragment_cash_deposit"
         tools:layout="@layout/fragment_cash_deposit" />
     <fragment
