--- a/app/src/main/res/layout/fragment_cash_deposit.xml
+++ b/app/src/main/res/layout/fragment_cash_deposit.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -11,45 +12,60 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/marign100dp"
-        tools:context=".ui.addmoney.CashDesposit_Activity">
+        tools:context=".ui.addmoney.cashdeposite.CashDesposit_Activity">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:background="@color/white"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@color/white">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:elevation="@dimen/marign5dp"
-                android:paddingTop="@dimen/marign5dp"
-                android:paddingBottom="@dimen/marign5dp"
-                android:id="@+id/payment_successful_header"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/carview_header"
+                card_view:cardElevation="10dp"
+                card_view:cardPreventCornerOverlap="false"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clipChildren="false"
+                android:clipToPadding="false"
+                android:divider="@android:color/transparent"
+                android:dividerHeight="0.0px"
+                android:elevation="8dp"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <ImageView
-                    android:id="@+id/img_backpress"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginStart="@dimen/marign10dp"
-                    android:layout_marginTop="@dimen/marign5dp"
-                    android:src="@drawable/ic_baseline_arrow_back_ios_24"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/lato_bold"
-                    android:text="@string/addmoney"
-                    android:textColor="@color/page_heading_color"
-                    android:textSize="@dimen/marign16sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toRightOf="@+id/img_backpress"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:paddingTop="@dimen/marign5dp"
+                    android:paddingBottom="@dimen/marign5dp">
+
+                    <ImageView
+                        android:id="@+id/img_backpress"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginStart="@dimen/marign10dp"
+
+                        android:src="@drawable/ic_baseline_arrow_back_ios_24"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@+id/img_backpress"
+                        android:fontFamily="@font/lato_bold"
+                        android:text="@string/addmoney"
+                        android:textColor="@color/page_heading_color"
+                        android:textSize="@dimen/marign16sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toRightOf="@+id/img_backpress"
+                        app:layout_constraintTop_toTopOf="parent" />
 
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                </RelativeLayout>
+
+
+            </androidx.cardview.widget.CardView>
 
 
             <TextView
@@ -57,24 +73,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/marign20dp"
+                android:layout_marginTop="@dimen/marign20dp"
                 android:fontFamily="@font/lato_bold"
                 android:text="@string/available_balance"
                 android:textColor="@color/black"
-                app:layout_constraintTop_toBottomOf="@+id/payment_successful_header"
                 app:layout_constraintLeft_toLeftOf="parent"
-                 />
+                app:layout_constraintTop_toBottomOf="@+id/carview_header" />
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/marign20dp"
+                android:layout_marginTop="@dimen/marign20dp"
                 android:fontFamily="@font/lato_bold"
                 android:text="Rs 60000"
                 android:textColor="@color/light_green"
-                app:layout_constraintTop_toBottomOf="@+id/payment_successful_header"
                 app:layout_constraintLeft_toRightOf="@+id/tv_add_money_to_wallet"
-                 />
+                app:layout_constraintTop_toBottomOf="@+id/carview_header" />
 
             <LinearLayout
                 android:id="@+id/linear_enteramount"
