--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -68,7 +68,7 @@
 
             </RelativeLayout>
 
-            <androidx.fragment.app.FragmentContainerView
+            <fragment
                 android:id="@+id/nav_host_fragment_content_host"
                 android:name="androidx.navigation.fragment.NavHostFragment"
                 android:layout_width="match_parent"
